gccida/g1/print_operand
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6225:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u; // [rsp+20h] [rbp-38h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6261:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 6027, "print_operand"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6314:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)x[1].fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6315:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
u.d.r[0] = ( __int64)x[1]; 
                     ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6317:12: error: expected expression
*( _OWORD *)&v18.r[1] = __PAIR128__( *( _QWORD *)&x[2], v15.rtwint); 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6317:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v18.r[1] = __PAIR128__( *( _QWORD *)&x[2], v15.rtwint); 
   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6368:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v17.rtwint = ( __int64)x[1].fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6369:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
u.d.r[0] = ( __int64)x[1]; 
                     ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6371:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
u.d.r[2] = ( __int64)x[2]; 
                     ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6372:12: error: expected expression
*( _OWORD *)&v19.r[1] = __PAIR128__( u.d.r[2], v17.rtwint); 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6372:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v19.r[1] = __PAIR128__( u.d.r[2], v17.rtwint); 
   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6374:19: error: passing 'char *' to parameter of incompatible type 'realvaluetype'
ereal_to_decimal( ( char *)&u, v19); 
                  ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/real.h:166:54: note: passing argument to parameter here
extern void ereal_to_decimal    PARAMS ((REAL_VALUE_TYPE, char *));
                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6414:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5776, "print_operand"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6426:23: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 0, 0, file); 
                      ^~~~~~~~
                      rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6426:32: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 0, 0, file); 
                    ~~~~~~~~~~~^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6426:48: error: use of undeclared identifier 'machine_mode'
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 0, 0, file); 
                                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6433:10: error: use of undeclared identifier 'off_66705A'
fwrite( &off_66705A, 1uLL, 3uLL, file); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6445:10: error: use of undeclared identifier 'off_6BD75B'
fwrite( &off_6BD75B, 1uLL, 3uLL, file); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/i386.c:6462:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5919, "print_operand"); 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand/src/obj/i386.o] Error 1
